--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "devDependencies": {
     "electron": "^30.1.0",
     "tailwindcss": "^3.4.4"
+  },
+  "dependencies": {
+    "sharp": "^0.33.4"
   }
 }
