--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "vite-plugin-electron-renderer": "^0.14.5"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
     "sharp": "^0.33.4"
   }
 }
