--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "moveup",
   "version": "1.0.0",
   "description": "An Electron-based desktop app that encourages users to take breaks and change their position while working. Integrates with Open Smart Desk which monitors deskt time and height.",
-  "main": "src/main.js",
+  "main": "dist/main/app.js",
   "scripts": {
-    "start": "npx electron .",
-    "build:css": "npx tailwindcss -i ./src/styles.css -o ./src/dist/output.css --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "electron-vite preview",
+    "dev": "electron-vite dev",
+    "prebuild": "electron-vite build",
+    "lint": "eslint . --fix",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,html}\""
   },
   "keywords": [
     "desk"
@@ -15,10 +17,26 @@
   "author": "Paweł Żentała <zentala@gmail.com>",
   "license": "UNLICENSED",
   "devDependencies": {
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.0",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "electron": "^30.1.0",
-    "tailwindcss": "^3.4.4"
+    "electron-vite": "^2.2.0",
+    "prettier": "^3.3.1",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.13",
+    "vite-plugin-electron": "^0.28.7",
+    "vite-plugin-electron-renderer": "^0.14.5"
   },
   "dependencies": {
-    "sharp": "^0.33.4"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.1",
+    "router": "^1.3.8",
+    "sharp": "^0.33.4",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0"
   }
 }
